refactor: change privacy page to licence policy instead.

--- a/EasyGames/Views/Shared/_Layout.cshtml
+++ b/EasyGames/Views/Shared/_Layout.cshtml
@@ -32,9 +32,6 @@ renders tempdata alerts for user feedback *@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
@@ -97,7 +94,7 @@ renders tempdata alerts for user feedback *@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - EasyGames - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - EasyGames - <a asp-area="" asp-controller="Home" asp-action="License">MIT License</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
