--- a/EasyGames/Views/Shared/_Layout.cshtml
+++ b/EasyGames/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@ renders tempdata alerts for user feedback *@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - EasyGames - <a asp-area="" asp-controller="Home" asp-action="License">MIT License</a>
+            EasyGames - <a asp-area="" asp-controller="Home" asp-action="License">MIT License</a>. University project at Charles Darwin University.
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
