--- a/EasyGames/Views/StockItems/Index.cshtml
+++ b/EasyGames/Views/StockItems/Index.cshtml
@@ -19,7 +19,10 @@
                 @Html.DisplayNameFor(model => model.Category)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @Html.DisplayNameFor(model => model.BuyPrice)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SellPrice)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
@@ -43,7 +46,10 @@
                 @Html.DisplayFor(modelItem => item.Category)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Price)
+                @Html.DisplayFor(modelItem => item.BuyPrice)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SellPrice)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Quantity)
