--- a/EasyGames/Views/Shared/_CardDetails.cshtml
+++ b/EasyGames/Views/Shared/_CardDetails.cshtml
@@ -37,7 +37,7 @@
             <dt class="col-sm-3">Category</dt>
             <dd class="col-sm-9">@Model.Category</dd>
             <dt class="col-sm-3">Price</dt>
-            <dd class="col-sm-9">@Model.Price.ToString("C")</dd>
+            <dd class="col-sm-9">@Model.SellPrice.ToString("C")</dd>
             <dt class="col-sm-3">Quantity</dt>
             <dd class="col-sm-9">@Model.Quantity</dd>
             @if (!string.IsNullOrWhiteSpace(Model.Description))
