--- a/EasyGames/Views/Users/Index.cshtml
+++ b/EasyGames/Views/Users/Index.cshtml
@@ -69,6 +69,14 @@
                         </button>
                     </form>
 
+                    <form asp-action="ToggleProprietor" method="post" class="d-inline me-1">
+                        @Html.AntiForgeryToken()
+                        <input type="hidden" name="id" value="@u.Id" />
+                        <button class="btn btn-sm btn-outline-warning">
+                            @(roles.Contains("Proprietor") ? "Remove Proprietor" : "Make Proprietor")
+                        </button>
+                    </form>
+
                     <form asp-action="Delete" method="post" class="d-inline"
                           onsubmit="return confirm('Delete this user?');">
                         @Html.AntiForgeryToken()
